--- a/controllers/badges/create.htm
+++ b/controllers/badges/create.htm
@@ -7,9 +7,11 @@
 
 <?php if (!$this->fatalError): ?>
 
+    <div class="layout fancy-layout">
     <?= Form::open(['class'=>'layout-item stretch layout-column']) ?>
 
         <?= $this->formRender() ?>
+
 
         <div class="form-buttons layout-item fix">
             <div class="loading-indicator-container">
@@ -39,6 +41,7 @@
         </div>
 
     <?= Form::close() ?>
+    </div>
 
 <?php else: ?>
 
