Added rewards tab to user info

--- a/models/badge/users.htm
+++ b/models/badge/users.htm
@@ -4,7 +4,7 @@
     <div class="control-list" data-control="listwidget">
         <table class="table data" data-control="rowlink">
             <thead>
-                <th class="active list-cell-name-title">
+                <th colspan=2 class="active list-cell-name-title">
                     <a>User has completed the following badges</a>
                 </th>
             </thead>
