--- a/controllers/activities/update.htm
+++ b/controllers/activities/update.htm
@@ -1,6 +1,6 @@
 <?php Block::put('breadcrumb') ?>
     <ul>
-        <li><a href="<?= Backend::url('dma/friends/badges') ?>">Badges</a></li>
+        <li><a href="<?= Backend::url('dma/friends/activities') ?>">Activities</a></li>
         <li><?= e($this->pageTitle) ?></li>
     </ul>
 <?php Block::endPut() ?>
