--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
         <p class="view"><a href="https://github.com/DallasMuseumArt/OctoberFriends">View the Project on GitHub <small>DallasMuseumArt/OctoberFriends</small></a></p>
 
         <ul>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.0.zip">Download <strong>v2.0 ZIP File</strong></a></li>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.0.tar.gz">Download <strong>v2.0 TAR Ball</strong></a></li>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/zipball/master">Download <strong>development branch ZIP File</strong></a></li>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/tarball/master">Download <strong>development branch TAR Ball</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.0.zip">Download <strong>v2.0 ZIP</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.0.tar.gz">Download <strong>v2.0 TAR</strong></a></li>
           <li><a href="https://github.com/DallasMuseumArt/OctoberFriends">View On <strong>GitHub</strong></a></li>
+        </ul>
+        <ul>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/zipball/master">Download <strong>devel ZIP</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/tarball/master">Download <strong>devel TAR</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriendsTheme">Get the <strong>Theme</strong></a></li>
         </ul>
       </header>
       <section>
