--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@ Substituting the appropriate database, user, and password</li>
 </ul>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/DallasMuseumArt">DallasMuseumArt</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/DallasMuseumArt">Dallas Museum of Art</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
