--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <section>
         <p>DMA Friends is an open source plugin for <a href="http://octobercms.com">October CMS</a> that encourages and recognizes visitor participation as an essential ingredient of the museum experience. </p>
 
+<h1>IMPORTANT NOTE:</h1>
+
+<p> The friends plugin is currently designed to work with builds no later then 186 of October CMS </p>
+
 <h1>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h1>
 
