fixed links to documentation

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 <h1>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h1>
 
-<p><a href="docs/ACTIVITY-TYPES.md">Developing custom activity types</a></p>
+<p><a href="https://github.com/DallasMuseumArt/OctoberFriends/blob/master/docs/ACTIVITY-TYPES.md">Developing custom activity types</a></p>
 
-<p><a href="docs/EVENTS.md">Using custom events</a> </p>
+<p><a href="https://github.com/DallasMuseumArt/OctoberFriends/blob/master/docs/EVENTS.md">Using custom events</a> </p>
 
 <p>PHP API Documentation is available at <a href="http://developer.dma.org/friends/">http://developer.dma.org/friends/</a></p>
 
