--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <p class="view"><a href="https://github.com/DallasMuseumArt/OctoberFriends">View the Project on GitHub <small>DallasMuseumArt/OctoberFriends</small></a></p>
 
         <ul>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.5.1.zip">Download <strong>v2.5.1 ZIP</strong></a></li>
-          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.5.1.tar.gz">Download <strong>v2.5.1 TAR</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.6.zip">Download <strong>v2.6 ZIP</strong></a></li>
+          <li><a href="https://github.com/DallasMuseumArt/OctoberFriends/archive/v2.6.tar.gz">Download <strong>v2.6 TAR</strong></a></li>
           <li><a href="https://github.com/DallasMuseumArt/OctoberFriends">View On <strong>GitHub</strong></a></li>
         </ul>
         <ul>
@@ -53,7 +53,7 @@
 
 <p><a href="https://github.com/DallasMuseumArt/OctoberFriends/blob/master/docs/EVENTS.md">Using custom events</a> </p>
 
-<p>PHP API Documentation is available at <a href="http://developer.dma.org/friends/">http://developer.dma.org/friends/</a></p>
+<p>PHP API Documentation is available at <a href="http://developer.dma.org/">http://developer.dma.org</a></p>
 
 <p>OctoberCMS Documentation is available at <a href="https://octobercms.com/docs/">https://octobercms.com/docs/</a></p>
 
